objects/adapps__Optimizer_Report__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Is_Premier_Plus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Premier Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>adapps__Is_Premier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Premier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>adapps__Is_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>adapps__Is_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Standard</label>
        <type>Checkbox</type>
    </fields>
    <label>Optimizer Report</label>
    <listViews>
        <fullName>adapps__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Optimizer Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Optimizer Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>